--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "error"
   ],
   "author": "Zak Angelle",
+  "repository": "https://github.com/zakangelle/fallback-image",
   "license": "MIT",
   "devDependencies": {
     "nodemock": "^0.3.4",
