--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "browserify": "^13.0.0",
     "nodemock": "^0.3.4",
     "tape": "^3.4.0"
   },
