--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Load a fallback image if an image errors out",
   "main": "index.js",
   "scripts": {
+    "build:standalone": "mkdir -p dist && browserify index.js --standalone fallbackImage > dist/fallback-image.js",
     "test": "tape ./test/**/*.js",
-    "build:standalone": "mkdir -p dist && browserify index.js --standalone fallbackImage > dist/fallback-image.js"
+    "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
   },
   "keywords": [
     "fallback",
@@ -22,7 +23,9 @@
   "license": "MIT",
   "devDependencies": {
     "browserify": "^13.0.0",
+    "coveralls": "^2.11.9",
     "nodemock": "^0.3.4",
+    "nyc": "^6.4.0",
     "tape": "^3.4.0"
   },
   "bugs": {
